chore: update Hugo default language to German and add custom domain
- Changed  in  from  to .
- Added  file for custom domain configuration ().

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,7 +9,7 @@ enableRobotsTXT: true
 enableEmoji: true
 pygmentsUseClasses: true
 
-defaultContentLanguage: en
+defaultContentLanguage: de
 defaultContentLanguageInSubdir: true
 
 languages:
